--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vanilla",
+  "name": "wt2020f1blog",
   "version": "1.0.0",
-  "description": "JavaScript example starter project",
+  "description": "Posledná odovzávka z WT",
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
@@ -14,8 +14,5 @@
     "@babel/core": "7.2.0",
     "parcel-bundler": "^1.6.1"
   },
-  "keywords": [
-    "javascript",
-    "starter"
-  ]
+  "keywords": []
 }
